--- a/WebContent/footer.xhtml
+++ b/WebContent/footer.xhtml
@@ -14,7 +14,7 @@
 	    <div class="small-12 medium-6 large-5 columns">
 	      <p class="logo"><i class="fi-shield"></i> NEC Tracker PRO</p>
 	      <p class="footer-links">
-	        <a href="#">Home</a><i class="fi-home"></i>
+	        <a href="faces/home.xhtml">Home</a><i class="fi-home"></i>
 	        <a href="#">About</a><i class="fi-torsos-all"></i>
 	        <a href="#">Stats</a><i class="fi-graph-bar"></i>
 	        <a href="#">FAQ</a><i class="fi-info"></i>
