Resource updates, game/week/ss/season updaters, team stats started...

--- a/WebContent/homeTemplate.xhtml
+++ b/WebContent/homeTemplate.xhtml
@@ -23,6 +23,7 @@
 	    <h:outputStylesheet library="css" name="leaderboard.css" />
 	    <h:outputStylesheet library="css" name="footer.css" />
 	    <h:outputStylesheet library="css" name="colors.css" />
+	    <h:outputStylesheet library="css" name="profile.css" />
 	    <h:outputStylesheet library="css" name="app.css" />
     </f:facet>
     <f:facet name="first">
