--- a/XmlData/NEC29/Emails/sidebar-hero.html
+++ b/XmlData/NEC29/Emails/sidebar-hero.html
@@ -1544,6 +1544,7 @@ body.outlook p {
                                     </tr>
                                   </table>
                                 </th>
+                                <th class="expander"></th>
                               </tr>
                             </table>
                           </th>
@@ -1586,6 +1587,7 @@ body.outlook p {
                                     </tr>
                                   </table>
                                 </th>
+                                <th class="expander"></th>
                               </tr>
                             </table>
                           </th>
