--- a/WebContent/homeTemplate.xhtml
+++ b/WebContent/homeTemplate.xhtml
@@ -32,11 +32,12 @@
     	<h:outputScript library="js" name="app.js" />
 	</f:facet>
    
+   	<!-- API Key: AIzaSyB5qJuZ0E7uVngCIZOXv0OfWtSaFUmJks8 -->
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyB5qJuZ0E7uVngCIZOXv0OfWtSaFUmJks8"></script>
     <h:outputScript library="primefaces" name="jquery/jquery.js" target="head" />
 	<h:outputScript target="head">
 	    $ = jQuery;
 	</h:outputScript>
-    
     <!-- 
     <link href="https://fonts.googleapis.com/css?family=Suez+One" rel="stylesheet" />
    	<link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css" />
@@ -92,6 +93,7 @@
    		$(document).foundation();
     </script>
 	 -->
+	 
 </h:body>
 
 </html>
