stats fixes, jpa updates, upload & profile updates 11-1-16

--- a/WebContent/header.xhtml
+++ b/WebContent/header.xhtml
@@ -52,7 +52,10 @@
 		<h1 class="hero-main-header">NEC Tracker PRO</h1>
 		  <ul class="header-subnav">
 		    <li><a href="#">Take Action!</a></li>
-		    <li><a href="#" class="is-active">Carpe Diem!</a></li>
+		    <li><h:link outcome="playerPage" class="is-active">
+				<f:param name="pfsId" value="1" />
+				<f:param name="nec" value="28" />
+			</h:link>Profile:</li>
 		    <li><a target="_blank" href="http://zurb.com/responsive">Just do it!</a></li>
 		  </ul>
 	</header>
