--- a/WebContent/profileTemplate.xhtml
+++ b/WebContent/profileTemplate.xhtml
@@ -66,22 +66,15 @@
     </ui:insert>
 </div>
 
-<div class="row" >
-	<div id="content" class="small-12 medium-8 large-8 columns">
-	  <ui:insert name="content">
-	    	Content area.  See comments below this line in the source.
-	    	<!--  include your content file or uncomment the include below and create content.xhtml in this directory -->
-		  	<!-- <div> -->
-	    	<!-- <ui:include src="content.xhtml"/> -->  
-	    	<!-- </div> -->
-	  </ui:insert>
-	</div>
-	
-	<div id="sidebar" class="small-12 medium-4 large-4 columns">
-	  <ui:insert name="sidebar">
-			Sidebar area. 
-	  </ui:insert>
-	</div>
+
+<div id="content">
+  <ui:insert name="content">
+    	Content area.  See comments below this line in the source.
+    	<!--  include your content file or uncomment the include below and create content.xhtml in this directory -->
+	  	<!-- <div> -->
+    	<!-- <ui:include src="content.xhtml"/> -->  
+    	<!-- </div> -->
+  </ui:insert>
 </div>
 
 <div id="footer">
