--- a/WebContent/teamPage.xhtml
+++ b/WebContent/teamPage.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-	<ui:decorate template="homeTemplate.xhtml">
+	<ui:decorate template="profileTemplate.xhtml">
 		<ui:define name="header">
 			<ui:include src="/header.xhtml" />
 		</ui:define>
