chart fixes, summary page - need export, check points....

--- a/WebContent/footer.xhtml
+++ b/WebContent/footer.xhtml
@@ -16,7 +16,7 @@
 	      <p class="footer-links">
 	        <a href="faces/home.xhtml">Home</a><i class="fi-home"></i>
 	        <a href="#">About</a><i class="fi-torsos-all"></i>
-	        <a href="#">Stats</a><i class="fi-graph-bar"></i>
+	        <a href="faces/necHistory.xhtml">Stats</a><i class="fi-graph-bar"></i>
 	        <a href="#">FAQ</a><i class="fi-info"></i>
 	        <a href="#">Contact</a><i class="fi-mail"></i>
 	      </p>
