--- a/WebContent/header.xhtml
+++ b/WebContent/header.xhtml
@@ -55,8 +55,9 @@
 		    <li><h:link outcome="playerPage" class="is-active">
 				<f:param name="pfsId" value="1" />
 				<f:param name="nec" value="28" />
-			</h:link>Profile:</li>
-		    <li><a target="_blank" href="http://zurb.com/responsive">Just do it!</a></li>
+				Profile:
+			</h:link></li>
+		    <li><h:link outcome="necHistory">Summary:</h:link></li>
 		  </ul>
 	</header>
 	<!-- End Main Header -->
