--- a/WebContent/footer.xhtml
+++ b/WebContent/footer.xhtml
@@ -26,7 +26,7 @@
 	      <ul class="contact">
 	        <li><p><i class="fi-marker"></i>38 Prospect St. # 26, Pawcatuck CT, 06379</p></li>
 	        <li><p><i class="fi-telephone"></i>+1-603-918-0542</p></li>
-	        <li><p><i class="fi-mail"></i>necAdmin@gmail.com</p></li>
+	        <li><a href="mailto:nectrackerpro@gmail.com" style="color:#fff"><p><i class="fi-mail"></i>nectrackerpro@gmail.com</p></a></li>
 	      </ul>
 	    </div>
 	    <div class="small-12 medium-12 large-3 columns">
