--- a/WebContent/makePicksPage.xhtml
+++ b/WebContent/makePicksPage.xhtml
@@ -8,6 +8,7 @@
 	  xmlns:pe="http://primefaces.org/ui/extensions" >
 
 	<ui:decorate template="homeTemplate.xhtml">
+		<ui:define name="title">Select Picks</ui:define>
 		<ui:define name="header">
 			<ui:include src="/header.xhtml" />
 		</ui:define>
