fixes to make picks page - need to separate CC containers 11-20-16

--- a/WebContent/makePicksPage.xhtml
+++ b/WebContent/makePicksPage.xhtml
@@ -65,7 +65,7 @@
 		</ui:define>
 		
 		<ui:define name="sidebar">
-			<ui:include src="/sidebar.xhtml" />
+			<ui:include src="/leaderboardAside.xhtml" />
 		</ui:define>
 		
 		<ui:define name="footer">
