--- a/WebContent/leaderboardAside.xhtml
+++ b/WebContent/leaderboardAside.xhtml
@@ -43,13 +43,13 @@
 										<h5>#{leader.score}<small>&nbsp;&nbsp;#{leader.record}</small></h5>
 										<!-- prize icon row -->
 										<div class="row column align-spaced award-row">
-											<span><p:graphicImage value="#{leader.firstHalfIcon}" /></span>
-											<span><p:graphicImage value="#{leader.secondHalfIcon}" /></span>
-											<span><p:graphicImage value="#{leader.playoffIcon}" /></span>
-											<span><p:graphicImage value="#{leader.mnfTntIcon}" /></span>
-											<span><p:graphicImage value="#{leader.tnoIcon}" /></span>
-											<span><p:graphicImage value="#{leader.moneybackIcon}" /></span>
-											<span><p:graphicImage value="#{leader.superbowlIcon}" /></span>
+											<span><p:graphicImage value="#{leader.firstHalfIcon}" style="width:100%;height:100%;" /></span>
+											<span><p:graphicImage value="#{leader.secondHalfIcon}" style="width:100%;height:100%;" /></span>
+											<span><p:graphicImage value="#{leader.playoffIcon}" style="width:100%;height:100%;" /></span>
+											<span><p:graphicImage value="#{leader.mnfTntIcon}" style="width:100%;height:100%;" /></span>
+											<span><p:graphicImage value="#{leader.tnoIcon}" style="width:100%;height:100%;" /></span>
+											<span><p:graphicImage value="#{leader.moneybackIcon}" style="width:100%;height:100%;" /></span>
+											<span><p:graphicImage value="#{leader.superbowlIcon}" style="width:100%;height:100%;" /></span>
 										</div>
 									</p:column>
 								</p:row>
